--- a/styles/sass/_index.scss
+++ b/styles/sass/_index.scss
@@ -1,7 +1,10 @@
-.main__recipes,
-.main__menu {
+.main__recipes {
     display: flex;
     align-items: center;
+}
+
+.main__menu {
+    display: flex;
 }
 
 h3 {
@@ -59,19 +62,23 @@ hr {
     width: 50%;
 }
 
-.main__menu {
-    background-color: $primary__2;
+.menu__img {
+    align-self: center;
 }
+
 .menu__text {
     width: 50%;
     display: flex;
     flex-wrap: wrap;
-    padding: 5% 5% 0;
+    justify-content: center;
+    align-items: center;
+    background-color: $primary__2;
+
     
-    div {
-        width: 40%;
+    .menu__text__section {
+        width: 30%;
+        margin: 0;
         margin-left: 10%;
-        margin-bottom: 5%;
         position: relative;
 
         i {
@@ -87,8 +94,17 @@ hr {
 
         p {
             color: $p__text__1;
+            font-size: 0.55rem;
         }
 
+    }
+    
+    .section__top {
+        margin-top: 10%;
+    }
+
+    .section__bottom {
+        margin-bottom: 10%;
     }
 
 }
