--- a/styles/sass/_media.scss
+++ b/styles/sass/_media.scss
@@ -83,6 +83,12 @@
         display: none;
     }
 
+    ul.burger__nav {
+        position: absolute;
+        display: block;
+        
+    }
+
     .burger__menu {
         display: block;
         position: absolute;
