--- a/styles/sass/_media.scss
+++ b/styles/sass/_media.scss
@@ -48,7 +48,7 @@
     }
 
     .restaurants__wrapper {
-        width: 100vw;
+        width: 80vw;
 
         p {
             width: 80%;
@@ -78,16 +78,35 @@
     .header__contact {
         height: 60vh;
     }
+
+    .header__nav {
+        position: relative;
+
+        ul {
+            display: none;
+        }
+        
+        ul.burger__nav {
+            position: absolute;
+            display: block;
+            top: -200px;
+            overflow: hidden;
+            right: 10px;
+            background-color: white;
+            padding-top: 40px;
     
-    ul {
-        display: none;
+            li {
+                display: block;
+                padding: 5px 40px 5px 10px;
+                
+                a {
+                    font-size: 1rem;
+
+                }
+            }
+        }
     }
 
-    ul.burger__nav {
-        position: absolute;
-        display: block;
-        
-    }
 
     .burger__menu {
         display: block;
